# cargodisttest

./: .gitmodules  Cargo.toml  artifacts.json  axolotlsay-installer.ps1.txt  axolotlsay-installer.sh.txt  changelog.rss  dist-workspace.toml  index.html
.github/workflows/: release.yml
artifacts/: index.html
changelog/: index.html
changelog/v0.2.149/: index.html
changelog/v0.2.150/: index.html
changelog/v0.2.153/: index.html
changelog/v0.2.154/: index.html
changelog/v0.2.155/: index.html
changelog/v0.2.155-prerelease.1/: index.html
changelog/v0.2.155-prerelease.2/: index.html
changelog/v0.2.166/: index.html
changelog/v0.2.167-prerelease.1/: index.html
changelog/v0.2.171/: index.html
changelog/v0.2.173/: index.html
changelog/v0.2.174/: index.html
changelog/v0.2.175/: index.html
changelog/v0.2.176/: index.html
changelog/v0.2.178/: index.html
changelog/v0.2.180/: index.html
changelog/v0.2.181/: index.html
changelog/v0.2.182/: index.html
changelog/v0.2.186/: index.html
changelog/v0.2.188/: index.html
changelog/v0.2.191/: index.html
changelog/v0.2.192/: index.html
changelog/v0.2.193/: index.html
changelog/v0.2.194/: index.html
changelog/v0.2.195/: index.html
changelog/v0.2.196/: index.html
changelog/v0.2.197/: index.html
changelog/v0.2.198/: index.html
changelog/v0.2.199/: index.html
changelog/v0.2.201/: index.html
changelog/v0.2.204/: index.html
changelog/v0.2.206/: index.html
changelog/v0.2.207/: index.html
changelog/v0.2.208/: index.html
changelog/v0.2.209/: index.html
src/: main.rs
(+101 files in other folders)
