[package]
name = "axolotlsay"
description = "💬 a CLI for learning to distribute CLIs in rust"
version = "0.2.345"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mistydemeo/cargodisttest.git"
homepage = "https://github.com/mistydemeo/cargodisttest"

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
unicode-width = "0.1.10"

[dev-dependencies]
assert_cmd = "2.0.8"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
